# finance

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: need.md
docs/release/: distribution.md
docs/roadmap/: 00-audit-besoins-vs-implementation.md  01-socle-dashboard-mensuel.md  02-categories-marchands-abonnements.md  03-comparaisons-anomalies-revenus.md  04-budgets-projections-calendrier-frais.md  SUIVI.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ActiveFilters.tsx  AnalysisPage.tsx  BudgetsPage.tsx  CategoriesPage.tsx  Dashboard.tsx  FilterBar.tsx  ImportPanel.tsx  RecurringPage.tsx  TransactionsTable.tsx
src/lib/: analysis.ts  csv-import.ts  finance-store.ts  format.ts  types.ts
src/styles/: app.css
tests/: csv-import.test.ts
